<resources>
    <string name="app_name">IsraelTV</string>
    <string name="title_activity_login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_userid">Enter User ID</string>
    <string name="hints_email"><i>Email address</i></string>
    <string name="hints_password"><i>Password</i></string>
    <string name="hints_search">הקלד כאן מילות חיפוש...</string>
    <string name="vod">ארץ נהדרת</string>
    <string name="record1">אורלי וגיא</string>
    <string name="record2">פסקול</string>
    <string name="record3">פותחים שישי </string>
    <string name="record4">חדשות</string>
    <string name="record5">שמש</string>
    <string name="login">התחברות</string>
    <string name="login_register_user">הרשמה ללקוחות חדשים</string>
    <string name="login_forgot_password">איפוס סיסמה</string>
    <string name="register_title">הרשמה ללקוחות חדשים</string>
    <string name="register_name">שם מלא</string>
    <string name="register_email">דואר אלקטרוני</string>
    <string name="register_email_explain">אם הוזמנת ע"י חבר דרך עמוד "הזמן חבר" הקלד כאן את קוד ההזמנה שקיבלת</string>
    <string name="register_email_verification">הזן שוב כתובת דואר אלקטרוני</string>
    <string name="register_password">סיסמה</string>
    <string name="register_confirm_password">אימות סיסמה</string>
    <string name="register_reenter_password">אימות סיסמה</string>
    <string name="register_show_password">הצג סיסמה</string>
    <string name="register_hide_password">הסתר סיסמה</string>
    <string name="register_phone">טלפון</string>
    <string name="register_chapture_code">קוד אימות</string>
    <string name="register_chapture_code_decription">הכנס ברצף את קוד האימות משמאל לימין</string>
    <string name="register_referral_code_title">אופציונאלי - לא חובה</string>
    <string name="register_referral_code">קוד הזמנה</string>
    <string name="register_referral_code_explain">אם הוזמנת ע"י חבר דרך עמוד "הזמן חבר" הקלד כאן את קוד ההזמנה שקיבלת</string>
    <string name="register_join_us">המשך</string>
    <string name="verify_title"> אימות חשבון</string>
    <string name="verify_description">אנא בדוק את האימייל ואמת את הקוד שקיבלת. קוד אימות חשבון נשלח לכתובת אימייל&#160;&#160;&#160;</string>
    <string name="verify_code">קוד אימות חשבון</string>
    <string name="verify_resend_code"><u>לא קיבלתי קוד, שלח שוב</u></string>
    <string name="verify_resend_count_left">&#160;פעמים)</string>
    <string name="verify_resend_count_right">(נשלח&#160;</string>
    <string name="verify_contact_us_description">אם הינך מצליח לקבל קוד אימות חשבון לאימייל אנא צור איתנו קשר באתר בכתובת: israel.tv</string>
    <string name="verify_contact_us">צור קשר</string>
    <string name="verify_active_code">אמת חשבון כעת</string>
    <string name="login_error_11302">דוא"ל או סיסמה שגויים</string>
    <string name="login_with_interactive_user">Login with inactive user</string>
    <string name="account_not_exists">Account not exists</string>
    <string name="login_successfull">ההתחברות בוצעה בהצלחה</string>
    <string name="login_device_id">מספר סריאלי</string>
    <string name="reset_password_success">סיסמה חדשה נשלחה לכתובת אימייל</string>
    <string name="reset_password_error_11008">asked up 10 times forget password</string>
    <string name="reset_password_error_11009">כתובת האימייל שהוזן אינו קיים במערכת</string>
    <string name="register_required_error">שדה חובה</string>
    <string name="register_name_filter_error">שם מלא צריך להכיל אותיות בעברית או באנגלית בלבד</string>
    <string name="register_email_filter_error">כתובת המייל שגויה</string>
    <string name="register_email_equalto_error">אימות אימייל אינו תואם את האיימיל שרשמת</string>
    <string name="register_password_filter_error"> סיסמה צריכה להכיל אותיות באנגלית/מספרים בלבד</string>
    <string name="register_password_length_error">סיסמה צריכה להכיל לפחות 4 אותיות/מספרים ומעלה</string>
    <string name="register_password_equalto_error">סיסמת אימות אינה תואמת את הסיסמה שרשמת</string>
    <string name="register_phone_length_error">מספר הטלפון שהכנסת קצר מידי</string>
    <string name="register_phone_filter_error">שדה זה צריך להכיל מספרים בלבד</string>
    <string name="registration_success">ההתחברות בוצעה בהצלחה</string>
    <string name="registration_error_11000_401">שם מלא צריך להכיל אותיות בעברית או באנגלית בלבד</string>
    <string name="registration_error_11000_402">שם משתמש צריך להכיל אותיות באנגלית ומספרים בלבד</string>
    <string name="registration_error_11000_403">שם משתמש צריך להכיל לפחות 3 אותיות ומעלה</string>
    <string name="registration_error_11000_404">כתובת המייל שגויה</string>
    <string name="registration_error_11000_405">שדה זה צריך להכיל מספרים בלבד</string>
    <string name="registration_error_11000_406">מספר הטלפון שהכנסת קצר מידי</string>
    <string name="registration_error_11000_407"> סיסמה צריכה להכיל אותיות באנגלית/מספרים בלבד</string>
    <string name="registration_error_11000_408">סיסמה צריכה להכיל לפחות 4 אותיות/מספרים ומעלה</string>
    <string name="registration_error_11000_409">סיסמת אימות אינה תואמת את הסיסמה שרשמת</string>
    <string name="registration_error_11000_421">קוד הזמנה שגוי</string>
    <string name="registration_error_58403">לא ניתן להירשם דרך כתובת אייפי זו</string>
    <string name="registration_error_11111">Register closed</string>
    <string name="registration_error_11112">שם משתמש תפוס. אנא בחר שם משתמש אחר</string>
    <string name="registration_error_11113">שגיאה: כתובת המייל כבר בשימוש</string>
    <string name="registration_error_11114">הסיסמה צריכה יותר מ 4 תווים</string>
    <string name="registration_error_11007">קוד האימות שהכנסת שגוי</string>
    <string name="registration_error_11017">אימייל לא יכול לשלוח, בבקשה לבדוק את כתובת הדוא"ל לאמת או לא!</string>
    <string name="registration_error_other">Some exception error occured</string>
    <string name="registration_error_exception">Some exception error occured</string>
    <string name="registration_error_unknown">Unknown error</string>
    <string name="registration_no_capture_code_image">Network is not  connected.</string>
    <string name="register_error_msg_title">הודעה</string>
    <string name="register_error_msg">לא ניתן להירשם. אנא צור איתנו קשר באתר בכתובת: israel.tv</string>
    <string name="verify_error_code_empty">שדה חובה</string>
    <string name="verify_error_other">some error occured</string>
    <string name="verify_error_0">הקוד נשלח שוב כבקשתך</string>
    <string name="verify_error_58117">קוד הפעלה לא חוקי</string>
    <string name="verify_error_58118">send active email again,no this email user</string>
    <string name="verify_error_58119">send active email again,actived already</string>
    <string name="verify_error_58120">send active email again,send active email problem.</string>
    <string name="verify_success">ההתחברות בוצעה בהצלחה</string>
    <string name="episode_playnext_or_not">לנגן את הפרק הבא?</string>
    <string name="episode_playstop">יציאה</string>
    <string name="no_enough_disk_space_message">Sorry, You should have more than %1$d Mbyte free space.</string>
    <string name="internet_connection_on_small_message">Internet connection\nis ON</string>
    <string name="internet_connection_off_small_message">Internet connection\nis OFF</string>
    <string name="reconnect_continue_watching">האם ברצונך להמשיך לצפות בערוץ זה ?</string>
    <string name="speedtest_progress_text">בטעינה...</string>
    <string name="Alef">א</string>
    <string name="Bet">ב</string>
    <string name="Gimel">ג</string>
    <string name="Dalet">ד</string>
    <string name="He">ה</string>
    <string name="Vav">ו</string>
    <string name="Zayin">ז</string>
    <string name="Het">ח</string>
    <string name="Tet">ט</string>
    <string name="Yod">י</string>
    <string name="Kaf">כ</string>
    <string name="Lamed">ל</string>
    <string name="Mem">מ</string>
    <string name="Nun">נ</string>
    <string name="Samekh">ס</string>
    <string name="Ayin">ע</string>
    <string name="Pe">פ</string>
    <string name="Tsadi">צ</string>
    <string name="Qof">ק</string>
    <string name="Resh">ר</string>
    <string name="Shin">ש</string>
    <string name="NunSofit">ן</string>
    <string name="MemSofit">ם</string>
    <string name="Koof">ך</string>
    <string name="PeSofit">ף</string>
    <string name="TsadiSofit">ץ</string>
    <string name="Tav">ת</string>
    <string name="submit">חפש</string>
    <string name="OwnIMESpace"></string>
</resources>