<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="27dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:layout_marginTop="27dp"
        android:fillViewport="true"
        android:isScrollContainer="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="500dp"
                android:layout_height="55dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/login_logo"/>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:focusableInTouchMode="true"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingBottom="20dp"
                android:paddingTop="20dp">

                <!-- Email Label -->

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:text="דוא״ל"
                    android:textColor="#fff"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/backgroun_edittext"
                        android:elevation="5dp"
                        android:focusable="true"
                        android:gravity="right|center"
                        android:hint="@string/hints_email"
                        android:imeOptions="actionNext"
                        android:inputType="textNoSuggestions"
                        android:maxLines="1"
                        android:nextFocusDown="@+id/et_password"
                        android:nextFocusUp="@+id/btn_forgot_password"
                        android:paddingLeft="@dimen/register_edittext_padding"
                        android:paddingRight="@dimen/register_edittext_padding"
                        android:textColor="#FFF"
                        android:textColorHint="#d3d3d3"
                        android:textSize="18sp"/>

                    <requestFocus
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginStart="63dp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:text="סיסמה"
                    android:textColor="#fff"
                    android:textSize="18sp"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/backgroun_edittext"
                        android:elevation="5dp"
                        android:focusable="true"
                        android:gravity="right|center"
                        android:hint="@string/hints_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:nextFocusDown="@+id/btn_login"
                        android:nextFocusUp="@+id/et_username"
                        android:paddingLeft="@dimen/register_edittext_padding"
                        android:paddingRight="@dimen/register_edittext_padding"
                        android:textColor="#FFF"
                        android:textColorHint="#d3d3d3"
                        android:textSize="18sp" />

                </RelativeLayout>

                <Button
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/button_pressed_bg"
                    android:elevation="5dp"
                    android:focusable="true"
                    android:gravity="center"
                    android:nextFocusDown="@+id/btn_registration"
                    android:nextFocusUp="@+id/et_password"
                    android:padding="10dp"
                    android:text="@string/login"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    android:textStyle="bold"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/btn_registration"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginRight="10dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_pressed_bg"
                        android:focusable="true"
                        android:gravity="center"
                        android:nextFocusDown="@+id/btn_forgot_password"
                        android:nextFocusUp="@+id/btn_login"
                        android:padding="10dp"
                        android:text="@string/login_register_user"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                    <Button
                        android:id="@+id/btn_forgot_password"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_weight="1"
                        android:background="@drawable/button_pressed_bg"
                        android:focusable="true"
                        android:gravity="center"
                        android:nextFocusDown="@+id/et_username"
                        android:nextFocusUp="@+id/btn_registration"
                        android:padding="10dp"
                        android:text="@string/login_forgot_password"
                        android:textColor="#fff"
                        android:textSize="18sp"
                        android:textStyle="bold"/>
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_deviceID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:text="@string/login_device_id"
                    android:textColor="@color/white"
                    android:textDirection="rtl"/>
            </LinearLayout>



        </LinearLayout>
    </ScrollView>

</LinearLayout>